# EpilepsySemiology

./: .gitattributes  .gitignore  CMakeLists.txt  Minutes from JD minions meeting 24.3.2020  README.md
SemiologyVisualization/: SemiologyVisualization.py
SemiologyVisualization/Resources/Image/: MNI_152_gif_cerebrum.seg.nrrd
